--- a/fmapp2/AndroidManifest.xml
+++ b/fmapp2/AndroidManifest.xml
@@ -59,6 +59,7 @@
             android:name=".FMRadio"
             android:label="@string/app_name"
             android:clearTaskOnLaunch="true"
+            android:screenOrientation="portrait"
             android:allowTaskReparenting="true"
             android:launchMode="singleTask"
             android:configChanges="orientation|keyboardHidden|screenSize"
