--- a/FMRecord/AndroidManifest.xml
+++ b/FMRecord/AndroidManifest.xml
@@ -34,6 +34,7 @@
       <uses-permission android:name="android.permission.CAPTURE_AUDIO_OUTPUT" />
       <uses-permission android:name="android.permission.INTERACT_ACROSS_USERS_FULL"/>
       <uses-permission android:name="android.permission.INTERACT_ACROSS_USERS" />
+      <uses-permission android:name="android.permission.REAL_GET_TASKS" />
 
 <application>
 
